--- a/beta/diff.html
+++ b/beta/diff.html
@@ -246,8 +246,8 @@
           <path d="M6 9H3V7h3V4l5 4-5 4V9z m8-7v12c0 0.55-0.45 1-1 1H1c-0.55 0-1-0.45-1-1V2c0-0.55 0.45-1 1-1h12c0.55 0 1 0.45 1 1z m-1 0H1v12h12V2z"></path>
       </svg>      <a href="#d2h-309318" class="d2h-file-name">/home/runner/work/progress/progress/clones/beta/{ha-core/homeassistant/components → beta/custom_components}/plugwise/util.py</a>
       <span class="d2h-file-stats">
-          <span class="d2h-lines-added">+11</span>
-          <span class="d2h-lines-deleted">-4</span>
+          <span class="d2h-lines-added">+12</span>
+          <span class="d2h-lines-deleted">-5</span>
       </span>
     </span>
 </li>
@@ -48612,7 +48612,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">def plugwise_command[<del>_PlugwiseEntityT</del>: PlugwiseEntity, **_P, _R](</span>
+            <span class="d2h-code-line-ctn">def plugwise_command[<del>_PlugwiseEntityT</del>: PlugwiseEntity, **<del>_P</del>, <del>_R</del>](</span>
         </div>
     </td>
 </tr><tr>
@@ -48622,7 +48622,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">    func: Callable[Concatenate[<del>_PlugwiseEntityT</del>, _P], Awaitable[_R]],</span>
+            <span class="d2h-code-line-ctn">    func: Callable[Concatenate[<del>_PlugwiseEntityT</del>, <del>_P</del>], Awaitable[<del>_R</del>]],</span>
         </div>
     </td>
 </tr><tr>
@@ -48632,7 +48632,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">) -&gt; Callable[Concatenate[<del>_PlugwiseEntityT</del>, _P], Coroutine[Any, Any, _R]]:</span>
+            <span class="d2h-code-line-ctn">) -&gt; Callable[Concatenate[<del>_PlugwiseEntityT</del>, <del>_P</del>], Coroutine[Any, Any, <del>_R</del>]]:</span>
         </div>
     </td>
 </tr><tr>
@@ -48668,7 +48668,7 @@
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-info"></td>
     <td class="d2h-info">
-        <div class="d2h-code-side-line">@@ -21,7 +28,7 @@</div>
+        <div class="d2h-code-side-line">@@ -21,8 +28,8 @@</div>
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
@@ -48707,17 +48707,17 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">        self: <del>_PlugwiseEntityT</del>, *args: _P.args, **kwargs: _P.kwargs</span>
+            <span class="d2h-code-line-ctn">        self: <del>_PlugwiseEntityT</del>, *args: <del>_P</del>.args, **kwargs: <del>_P</del>.kwargs</span>
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-side-linenumber d2h-cntx">
+    <td class="d2h-code-side-linenumber d2h-del d2h-change">
       25
     </td>
-    <td class="d2h-cntx">
+    <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
-            <span class="d2h-code-line-prefix">&nbsp;</span>
-            <span class="d2h-code-line-ctn">    ) -&gt; _R:</span>
+            <span class="d2h-code-line-prefix">-</span>
+            <span class="d2h-code-line-ctn">    ) -&gt; <del>_R</del>:</span>
         </div>
     </td>
 </tr><tr>
@@ -48738,6 +48738,16 @@
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">&nbsp;</span>
             <span class="d2h-code-line-ctn">            return await func(self, *args, **kwargs)</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-side-linenumber d2h-cntx">
+      28
+    </td>
+    <td class="d2h-cntx">
+        <div class="d2h-code-side-line">
+            <span class="d2h-code-line-prefix">&nbsp;</span>
+            <span class="d2h-code-line-ctn">        except PlugwiseException as err:</span>
         </div>
     </td>
 </tr>
@@ -48886,7 +48896,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn"># _R = TypeVar(&quot;_R&quot;)</span>
+            <span class="d2h-code-line-ctn"># R = TypeVar(&quot;_R&quot;)</span>
         </div>
     </td>
 </tr><tr>
@@ -48896,7 +48906,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn"># _P = ParamSpec(&quot;_P&quot;)</span>
+            <span class="d2h-code-line-ctn"># P = ParamSpec(&quot;_P&quot;)</span>
         </div>
     </td>
 </tr><tr>
@@ -48926,7 +48936,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">def plugwise_command[<ins>PlugwiseEntityT</ins>: PlugwiseEntity, **_P, _R](</span>
+            <span class="d2h-code-line-ctn">def plugwise_command[<ins>PlugwiseEntityT</ins>: PlugwiseEntity, **<ins>P</ins>, <ins>R</ins>](</span>
         </div>
     </td>
 </tr><tr>
@@ -48936,7 +48946,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    func: Callable[Concatenate[<ins>PlugwiseEntityT</ins>, _P], Awaitable[_R]],</span>
+            <span class="d2h-code-line-ctn">    func: Callable[Concatenate[<ins>PlugwiseEntityT</ins>, <ins>P</ins>], Awaitable[<ins>R</ins>]],</span>
         </div>
     </td>
 </tr><tr>
@@ -48946,7 +48956,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">) -&gt; Callable[Concatenate[<ins>PlugwiseEntityT</ins>, _P], Coroutine[Any, Any, _R]]:</span>
+            <span class="d2h-code-line-ctn">) -&gt; Callable[Concatenate[<ins>PlugwiseEntityT</ins>, <ins>P</ins>], Coroutine[Any, Any, <ins>R</ins>]]:</span>
         </div>
     </td>
 </tr><tr>
@@ -49021,17 +49031,17 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        self: <ins>PlugwiseEntityT</ins>, *args: _P.args, **kwargs: _P.kwargs</span>
+            <span class="d2h-code-line-ctn">        self: <ins>PlugwiseEntityT</ins>, *args: <ins>P</ins>.args, **kwargs: <ins>P</ins>.kwargs</span>
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-side-linenumber d2h-cntx">
+    <td class="d2h-code-side-linenumber d2h-ins d2h-change">
       32
     </td>
-    <td class="d2h-cntx">
+    <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
-            <span class="d2h-code-line-prefix">&nbsp;</span>
-            <span class="d2h-code-line-ctn">    ) -&gt; _R:</span>
+            <span class="d2h-code-line-prefix">+</span>
+            <span class="d2h-code-line-ctn">    ) -&gt; <ins>R</ins>:</span>
         </div>
     </td>
 </tr><tr>
@@ -49052,6 +49062,16 @@
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">&nbsp;</span>
             <span class="d2h-code-line-ctn">            return await func(self, *args, **kwargs)</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-side-linenumber d2h-cntx">
+      35
+    </td>
+    <td class="d2h-cntx">
+        <div class="d2h-code-side-line">
+            <span class="d2h-code-line-prefix">&nbsp;</span>
+            <span class="d2h-code-line-ctn">        except PlugwiseException as err:</span>
         </div>
     </td>
 </tr>
