--- a/beta/diff_main.html
+++ b/beta/diff_main.html
@@ -246,8 +246,8 @@
           <path d="M6 9H3V7h3V4l5 4-5 4V9z m8-7v12c0 0.55-0.45 1-1 1H1c-0.55 0-1-0.45-1-1V2c0-0.55 0.45-1 1-1h12c0.55 0 1 0.45 1 1z m-1 0H1v12h12V2z"></path>
       </svg>      <a href="#d2h-483680" class="d2h-file-name">/home/runner/work/progress/progress/clones/beta/{beta/custom_components → ha-core/homeassistant/components}/plugwise/util.py</a>
       <span class="d2h-file-stats">
-          <span class="d2h-lines-added">+4</span>
-          <span class="d2h-lines-deleted">-11</span>
+          <span class="d2h-lines-added">+5</span>
+          <span class="d2h-lines-deleted">-12</span>
       </span>
     </span>
 </li>
@@ -48642,7 +48642,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn"># _R = TypeVar(&quot;_R&quot;)</span>
+            <span class="d2h-code-line-ctn"># R = TypeVar(&quot;_R&quot;)</span>
         </div>
     </td>
 </tr><tr>
@@ -48652,7 +48652,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn"># _P = ParamSpec(&quot;_P&quot;)</span>
+            <span class="d2h-code-line-ctn"># P = ParamSpec(&quot;_P&quot;)</span>
         </div>
     </td>
 </tr><tr>
@@ -48682,7 +48682,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">def plugwise_command[<del>PlugwiseEntityT</del>: PlugwiseEntity, **_P, _R](</span>
+            <span class="d2h-code-line-ctn">def plugwise_command[<del>PlugwiseEntityT</del>: PlugwiseEntity, **<del>P</del>, <del>R</del>](</span>
         </div>
     </td>
 </tr><tr>
@@ -48692,7 +48692,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">    func: Callable[Concatenate[<del>PlugwiseEntityT</del>, _P], Awaitable[_R]],</span>
+            <span class="d2h-code-line-ctn">    func: Callable[Concatenate[<del>PlugwiseEntityT</del>, <del>P</del>], Awaitable[<del>R</del>]],</span>
         </div>
     </td>
 </tr><tr>
@@ -48702,7 +48702,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">) -&gt; Callable[Concatenate[<del>PlugwiseEntityT</del>, _P], Coroutine[Any, Any, _R]]:</span>
+            <span class="d2h-code-line-ctn">) -&gt; Callable[Concatenate[<del>PlugwiseEntityT</del>, <del>P</del>], Coroutine[Any, Any, <del>R</del>]]:</span>
         </div>
     </td>
 </tr><tr>
@@ -48738,7 +48738,7 @@
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-info"></td>
     <td class="d2h-info">
-        <div class="d2h-code-side-line">@@ -28,7 +21,7 @@</div>
+        <div class="d2h-code-side-line">@@ -28,8 +21,8 @@</div>
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
@@ -48777,17 +48777,17 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">        self: <del>PlugwiseEntityT</del>, *args: _P.args, **kwargs: _P.kwargs</span>
+            <span class="d2h-code-line-ctn">        self: <del>PlugwiseEntityT</del>, *args: <del>P</del>.args, **kwargs: <del>P</del>.kwargs</span>
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-side-linenumber d2h-cntx">
+    <td class="d2h-code-side-linenumber d2h-del d2h-change">
       32
     </td>
-    <td class="d2h-cntx">
+    <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
-            <span class="d2h-code-line-prefix">&nbsp;</span>
-            <span class="d2h-code-line-ctn">    ) -&gt; _R:</span>
+            <span class="d2h-code-line-prefix">-</span>
+            <span class="d2h-code-line-ctn">    ) -&gt; <del>R</del>:</span>
         </div>
     </td>
 </tr><tr>
@@ -48808,6 +48808,16 @@
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">&nbsp;</span>
             <span class="d2h-code-line-ctn">            return await func(self, *args, **kwargs)</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-side-linenumber d2h-cntx">
+      35
+    </td>
+    <td class="d2h-cntx">
+        <div class="d2h-code-side-line">
+            <span class="d2h-code-line-prefix">&nbsp;</span>
+            <span class="d2h-code-line-ctn">        except PlugwiseException as err:</span>
         </div>
     </td>
 </tr>
@@ -48996,7 +49006,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">def plugwise_command[<ins>_PlugwiseEntityT</ins>: PlugwiseEntity, **_P, _R](</span>
+            <span class="d2h-code-line-ctn">def plugwise_command[<ins>_PlugwiseEntityT</ins>: PlugwiseEntity, **<ins>_P</ins>, <ins>_R</ins>](</span>
         </div>
     </td>
 </tr><tr>
@@ -49006,7 +49016,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    func: Callable[Concatenate[<ins>_PlugwiseEntityT</ins>, _P], Awaitable[_R]],</span>
+            <span class="d2h-code-line-ctn">    func: Callable[Concatenate[<ins>_PlugwiseEntityT</ins>, <ins>_P</ins>], Awaitable[<ins>_R</ins>]],</span>
         </div>
     </td>
 </tr><tr>
@@ -49016,7 +49026,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">) -&gt; Callable[Concatenate[<ins>_PlugwiseEntityT</ins>, _P], Coroutine[Any, Any, _R]]:</span>
+            <span class="d2h-code-line-ctn">) -&gt; Callable[Concatenate[<ins>_PlugwiseEntityT</ins>, <ins>_P</ins>], Coroutine[Any, Any, <ins>_R</ins>]]:</span>
         </div>
     </td>
 </tr><tr>
@@ -49091,17 +49101,17 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        self: <ins>_PlugwiseEntityT</ins>, *args: _P.args, **kwargs: _P.kwargs</span>
+            <span class="d2h-code-line-ctn">        self: <ins>_PlugwiseEntityT</ins>, *args: <ins>_P</ins>.args, **kwargs: <ins>_P</ins>.kwargs</span>
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-side-linenumber d2h-cntx">
+    <td class="d2h-code-side-linenumber d2h-ins d2h-change">
       25
     </td>
-    <td class="d2h-cntx">
+    <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
-            <span class="d2h-code-line-prefix">&nbsp;</span>
-            <span class="d2h-code-line-ctn">    ) -&gt; _R:</span>
+            <span class="d2h-code-line-prefix">+</span>
+            <span class="d2h-code-line-ctn">    ) -&gt; <ins>_R</ins>:</span>
         </div>
     </td>
 </tr><tr>
@@ -49122,6 +49132,16 @@
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">&nbsp;</span>
             <span class="d2h-code-line-ctn">            return await func(self, *args, **kwargs)</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-side-linenumber d2h-cntx">
+      28
+    </td>
+    <td class="d2h-cntx">
+        <div class="d2h-code-side-line">
+            <span class="d2h-code-line-prefix">&nbsp;</span>
+            <span class="d2h-code-line-ctn">        except PlugwiseException as err:</span>
         </div>
     </td>
 </tr>
